--- a/src/main/angular-library/projects/sitmun-frontend-gui/package.json
+++ b/src/main/angular-library/projects/sitmun-frontend-gui/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "sitmun-frontend-gui",
+  "name": "@sitmun/frontend-gui",
   "version": "0.7.0",
+  "repository": "git://github.com/sitmun/sitmun-frontend-gui.git",
   "peerDependencies": {
     "@angular/common": "^6.0.0-rc.0 || ^6.0.0",
     "@angular/core": "^6.0.0-rc.0 || ^6.0.0",
@@ -12,12 +13,12 @@
     "@angular/platform-browser": "^6.0.2",
     "@angular/platform-browser-dynamic": "^6.0.2",
     "@angular/router": "^6.0.2",
+    "@sitmun/frontend-core": "0.7.3",
     "core-js": "^2.5.4",
     "rxjs": "^6.1.0",
     "rxjs-compat": "^6.1.0",
     "zone.js": "^0.8.26"
-  }
-  ,
+  },
   "dependencies": {
     "@types/openlayers": "^4.6.9",
     "ol": "^4.6.5",
@@ -25,6 +26,5 @@
     "proj4": "^2.4.4",
     "@types/moment": "^2.13.0",
     "moment": "^2.22.2"
-
   }
 }
