--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,13 @@
-language: node_js
+language: java
 
-node_js:
-  - '12'
+jdk:  
+  - openjdk8
+
+env:
+  - NODE_VERSION="0.12"
+
+before_install:
+  - nvm install $NODE_VERSION
 
 addons:
   sonarcloud:
