--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,11 @@ jdk:
   - openjdk8
 
 env:
-  - NODE_VERSION="0.12"
+  - NODE_VERSION="0.10"
 
 before_install:
   - nvm install $NODE_VERSION
+  - npm i -g npm@6
 
 addons:
   sonarcloud:
