--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,8 @@ env:
   - NODE_VERSION="0.10"
 
 before_install:
-  - nvm install $NODE_VERSION
-  - npm i -g npm@6
+  - nvm install 10.23.0
+  - npm install -g npm
 
 addons:
   sonarcloud:
