fixed bug --prod (publish error)

--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "build-angular-library": "ng build angular-library",
-    "build-sitmun-frontend-gui": "ng build sitmun-frontend-gui",
+    "build-angular-library": "ng build angular-library --prod",
+    "build-sitmun-frontend-gui": "ng build sitmun-frontend-gui --prod",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
@@ -36,7 +36,6 @@
     "jszip": "^3.5.0",
     "resize-observer-polyfill": "^1.5.1",
     "rxjs": "~6.6.0",
-    "rxjs-compat": "^6.6.3",
     "schematics-scss-migrate": "^1.3.13",
     "tslib": "^2.0.0",
     "web-animations-js": "^2.3.2",
