--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
-    "build-angular-library": "ng build angular-library --prod",
-    "build-sitmun-frontend-gui": "ng build sitmun-frontend-gui --prod",
+    "build-angular-library": "ng build angular-library",
+    "build-sitmun-frontend-gui": "ng build sitmun-frontend-gui",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
