--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "ng build",
+    "build": "ng build",    
     "build-angular-library": "ng build angular-library",
+    "build-angular-library-prod": "ng build angular-library --prod",
     "build-sitmun-frontend-gui": "ng build sitmun-frontend-gui",
+    "build-sitmun-frontend-gui": "ng build sitmun-frontend-gui --prod",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
