--- a/src/main/angular-library/src/tsconfig.app.json
+++ b/src/main/angular-library/src/tsconfig.app.json
@@ -11,6 +11,7 @@
     "**/*.spec.ts"
   ],
    "angularCompilerOptions": {
-    "enableIvy": false
+    "enableIvy": false,
+    "skipLibCheck": true
   }
 }
