First step towards migrating to Github Actions

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,10 +1,13 @@
+sonar.organization=sitmun
 sonar.projectKey=org.sitmun:sitmun-frontend-gui
+sonar.host.url=https://sonarcloud.io
+
 # =====================================================
 #   Meta-data for the project
 # =====================================================
 
 sonar.links.homepage=https://github.com/sitmun/sitmun-frontend-gui
-sonar.links.ci=https://travis-ci.com/sitmun/sitmun-frontend-gui
+sonar.links.ci=https://github.com/sitmun/sitmun-frontend-gui/actions
 sonar.links.scm=https://github.com/sitmun/sitmun-frontend-gui
 sonar.links.issue=https://github.com/sitmun/sitmun-frontend-gui/issues
 
@@ -13,9 +16,8 @@ sonar.links.issue=https://github.com/sitmun/sitmun-frontend-gui/issues
 # =====================================================
 
 # SQ standard properties
-# I think these are ignored if you run sonarcloud from gradle with its plugin. In that case, you need
-# to configure sonarqube in build.gradle
-# sonar.sources=src/main
-# sonar.tests=src/test
-# sonar.java.binaries=build/classes/java/main
-# sonar.test.binaries=build/classes/java/test
+sonar.sources=src
+sonar.tests=src
+sonar.exclusions=**/node_modules/**
+sonar.test.inclusions=**/*.spec.ts
+sonar.typescript.lcov.reportPaths=coverage/admin-app/lcov.info
