--- a/package.json
+++ b/package.json
@@ -6,14 +6,13 @@
     "start": "ng serve",
     "build": "ng build",
     "build-angular-library": "ng build angular-library",
-    "build-angular-library-prod": "ng build angular-library --prod",
-    "build-sitmun-frontend-gui": "ng build sitmun-frontend-gui",
-    "build-sitmun-frontend-gui-prod": "ng build sitmun-frontend-gui --prod",
+    "build-angular-library-prod": "ng build angular-library --prod",    
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "publish": "npm publish ./dist/sitmun-frontend-gui",
-    "compodoc": "npx compodoc -p tsconfig.json --output ./docs-build/doc-frontend-gui -n 'SITMUN Frontend GUI Angular Library documentation'"
+    "compodoc": "npx compodoc -p tsconfig.json --output ./docs-build/doc-frontend-gui -n 'SITMUN Frontend GUI Angular Library documentation'",
+    "sonar": "sonar-scanner"
   },
   "private": false,
   "dependencies": {
@@ -71,8 +70,8 @@
     "protractor": "~7.0.0",
     "sonar-scanner": "^3.1.0",
     "ts-node": "~8.3.0",
+    "tsickle": "~0.32.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.0.2",
-    "tsickle": "~0.32.0"
+    "typescript": "~4.0.2"
   }
 }
