--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build-sitmun-frontend-gui": "ng build sitmun-frontend-gui",
     "build-sitmun-frontend-gui-prod": "ng build sitmun-frontend-gui --prod",
     "build-angular-library": "ng build angular-library",
-    "build-angular-library-prod": "ng build angular-library --prod",    
+    "build-angular-library-prod": "ng build angular-library --prod",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
@@ -29,6 +29,7 @@
     "@angular/platform-browser-dynamic": "~10.1.6",
     "@angular/router": "~10.1.6",
     "@igniteui/material-icons-extended": "^2.4.0",
+    "@linnenschmidt/build-ng-packagr": "^9.0.0",
     "@ngx-translate/core": "^13.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
     "@syncfusion/ej2-angular-charts": "*",
@@ -36,6 +37,7 @@
     "core-js": "^3.8.2",
     "hammerjs": "^2.0.8",
     "igniteui-angular": "^10.2.3",
+    "jquery": "^3.6.0",
     "jszip": "^3.5.0",
     "resize-observer-polyfill": "^1.5.1",
     "rxjs": "~6.6.0",
@@ -61,6 +63,7 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
+    "d3": "^6.6.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~5.0.0",
