--- a/angular.json
+++ b/angular.json
@@ -26,7 +26,7 @@
               "src/main/angular-library/src/styles.css",
               "src/main/angular-library/src/theme.scss"
             ],
-            "scripts": []
+            "scripts": [ "node_modules/jquery/dist/jquery.js"]
           },
           "configurations": {
             "production": {
@@ -77,7 +77,7 @@
               "src/main/angular-library/src/styles.css",
               "src/main/angular-library/src/theme.scss"
             ],
-            "scripts": [],
+            "scripts": [ "node_modules/jquery/dist/jquery.js"],
             "assets": [
               "src/main/angular-library/src/favicon.ico",
               "src/main/angular-library/src/assets"
@@ -127,10 +127,18 @@
       "prefix": "sitmun-frontend-gui",
       "architect": {
         "build": {
-          "builder": "@angular-devkit/build-ng-packagr:build",
+          "builder": "@linnenschmidt/build-ng-packagr:build",
           "options": {
             "tsConfig": "src/main/angular-library/projects/sitmun-frontend-gui/tsconfig.lib.json",
-            "project": "src/main/angular-library/projects/sitmun-frontend-gui/ng-package.json"
+            "project": "src/main/angular-library/projects/sitmun-frontend-gui/ng-package.json",
+            "assets": [
+              "src/assets",
+              {
+                "glob": "**/*",
+                "input": "src/main/angular-library/projects/sitmun-frontend-gui/assets",
+                "output": "src/assets"
+              }
+            ]
           },
           "configurations": {
             "production": {
