--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "angular-library",
-  "version": "0.6.1",
+  "version": "0.8.2",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -16,7 +16,6 @@
     "compodoc": "npx compodoc -p tsconfig.json --output ./docs-build/doc-frontend-gui -n 'SITMUN Frontend GUI Angular Library documentation'",
     "sonar": "sonar-scanner"
   },
-  "private": false,
   "dependencies": {
     "@angular/animations": "~10.1.6",
     "@angular/cdk": "^10.2.7",
@@ -32,8 +31,8 @@
     "@linnenschmidt/build-ng-packagr": "^9.0.0",
     "@ngx-translate/core": "^13.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
-    "@syncfusion/ej2-angular-charts": "*",
-    "@syncfusion/ej2-angular-grids": "*",
+    "@syncfusion/ej2-angular-charts": "~18.3.51",
+    "@syncfusion/ej2-angular-grids": "~18.3.48",
     "core-js": "^3.8.2",
     "hammerjs": "^2.0.8",
     "igniteui-angular": "^10.2.3",
@@ -56,8 +55,7 @@
     "@angular/cli": "~10.1.7",
     "@angular/compiler-cli": "~10.1.6",
     "@igniteui/angular-schematics": "~10.2.620",
-    "@sitmun/frontend-core": "^0.8.0",
-    "@sitmun/frontend-gui": "^0.7.2",
+    "@sitmun/frontend-core": "^0.8.7",
     "@types/hammerjs": "^2.0.36",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
